@@ -2,5 +2,5 @@ Main script: this is a global variable in the main script
 From fork_me: this is a global variable in the closure script
 Main script: this is a global variable in the main script
 Main script: 4
-Forked: 1
-Main script: 5
+Forked: 5
+Main script: 6
