@@ -1,0 +1,10 @@
+$x is 1 from &function
+$x is 2 from &function
+$x is 3 from &function
+$x is 4 from &function
+Coroutine start
+Return value in main is: checkpoint A
+After checkpoint a and $z is 33
+Return value within fork is: checkpoint B
+After checkpoint b and $z is 34
+Return value in main is: done: 34
