@@ -2,7 +2,7 @@ foo
 Warning: Attempted to call non-existent function &foo at line 9
 bar
 Warning: &setf: can not set function &foo to a class java.lang.String at line 19
-Warning: &setf: invalid function name foo at line 20
+Warning: &setf: invalid function name 'foo' at line 20
 bar
 bar
 bar
